# retargeting

./: .gitignore  .gitmodules  README.md  virt_retarget.rviz
assets/: panda_leap_paxini.urdf  panda_leap_tac3d.urdf  panda_leap_tac3d.xml  panda_leap_tac3d_asset.xml  panda_shadow.urdf  scene.xml
docs/: index.md
log/: latest_build
ws_ros2/src/retargeting_benchmark/: CMakeLists.txt  package.xml
ws_ros2/src/retargeting_benchmark/launch/: real_prepare.py  record_video.launch.py  rviz_vis.py  rviz_vis_paxini.py  rviz_vis_shadow.py  virtual_robot.py
ws_ros2/src/retargeting_benchmark/rviz/: virtual_robot.rviz  vis.rviz  vis_paxini.rviz  vis_shadow.rviz
ws_ros2/src/retargeting_benchmark/src/: main_franka_reduce_state_freq.py  main_robot_control.py  main_robot_file_process.py  main_robot_real_high_freq.py  main_robot_real_high_freq_comments.py  main_robot_teleoperation.py  main_robot_teleoperation_rviz.py  main_virtual_robot.py  plot_completion_time.py  plot_complex_leap.py  plot_complex_shadow.py  plot_pinch_leap.py  plot_pinch_shadow.py  plot_success_rate.py  record_video.py  retarget_optimizer.py  robot_adaptor.py  robot_benchmark.py  robot_control.py  robot_mujoco.py  robot_pinocchio.py  robot_pinocchio_env.py  robot_real.py  robot_real_rviz.py  robot_teleoperation.py  robot_teleoperation_ros.py  rviz_visualize.py  single_hand_detector.py  vision_pro_detector.py
ws_ros2/src/retargeting_benchmark/src/bck/: robot_teleoperation.py
ws_ros2/src/retargeting_benchmark/src/utils/: utils_plot.py
ws_ros2/src/retargeting_benchmark/src/visualization/: test1.py
(+377 files in other folders)
