<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>retargeting_benchmark</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ymr20@mails.tsinghua.edu.cn">mingrui</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>leap_hand</exec_depend>  
  <build_depend>leap_hand</build_depend>  
  <test_depend>leap_hand</test_depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
